# StockAA

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-desktop.txt  run_api.sh  run_web.sh
.github/workflows/: build-desktop.yml
.streamlit/: config.toml
packaging/: README.md  StockAA.spec  run_desktop.py
scripts/: seed_data.py  setup_drive.py
src/api/: deps.py  main.py  schemas.py
src/api/routes/: portfolio.py  prices.py  transactions.py
src/cli/: display.py  main.py
src/cli/commands/: __init__.py  add.py  delete.py  report.py
src/data_providers/: __init__.py  base.py  price_manager.py  tpex_provider.py  twse_provider.py
src/models/: __init__.py  asset.py  base.py  database.py  enums.py  liability.py  migrations.py  price_history.py  transaction.py
src/repositories/: __init__.py  asset_repo.py  liability_repo.py  price_history_repo.py  transaction_repo.py
src/services/: calculation_service.py  portfolio_service.py  sample_data.py
src/utils/: config.py  exceptions.py  logger.py  tw_fees.py
src/web/: app.py  data.py  price_async.py
src/web/pages/: add_transaction.py  charts.py  dashboard.py  liabilities.py  transactions.py
tests/: conftest.py
tests/unit/: test_calculation.py  test_portfolio_service.py
